--- a/cn.zh-CN/使用指南/数据开发/调度配置/参数配置.md
+++ b/cn.zh-CN/使用指南/数据开发/调度配置/参数配置.md
@@ -18,7 +18,7 @@ DataWorks提供了两个系统参数，定义如下：
 -   $\{bdp.system.cyctime\}：定义为一个实例的定时运行时间，默认格式为yyyymmddhh24miss。
 -   $\{bdp.system.bizdate\}：定义为一个实例计算时对应的业务日期，业务日期默认为运行日期的前一天，默认以yyyymmdd的格式显示。
 
-从定义可知，运行时间和业务日期的计算公式为`运行时间=业务日期-1`。
+从定义可知，运行时间和业务日期的计算公式为`运行时间=业务日期+1`。
 
 如果使用系统参数，无需在编辑框设置，直接在代码中引用$\{bizdate\}即可，系统将自动替换代码中对这个参数的引用字段。
 
